tests/sources/invalid/arrays/array_method_call_errors.fire
// Array/string method-call errors: mutation methods on fixed-size arrays,
// wrong arg counts, wrong element types, and unknown methods.

import @firescript/std.io.println;

int32[3] nums = [1, 2, 3];

// Arrays are fixed-size: these mutation methods are not supported
nums.append(4);  //~ ERROR FS-SEM-0010 @6
nums.insert(0, 9);  //~ ERROR FS-SEM-0010 @6
nums.pop();  //~ ERROR FS-SEM-0010 @6
nums.clear();  //~ ERROR FS-SEM-0010 @6

// length/size take no arguments
int32 badLen = nums.length(1);  //~ ERROR FS-SEM-0010 @21

// index/count expect exactly one argument of the element type
int32 badIndexArgs = nums.index();  //~ ERROR FS-SEM-0010 @27
int32 badIndexType = nums.index("two");  //~ ERROR FS-SEM-0010 @33
int32 badCountArgs = nums.count(1, 2);  //~ ERROR FS-SEM-0010 @27

// Unknown array method
nums.frobnicate();  //~ ERROR FS-SEM-0010 @6

// String methods: length takes no arguments; unknown methods are rejected
string s = "hello";
int32 badStrLen = s.length(1);  //~ ERROR FS-SEM-0010 @21
s.frobnicate();  //~ ERROR FS-SEM-0010 @3
